<resources>
    <string name="app_name">Covid-19 Passport</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="passport_id">Passport ID</string>
    <string name="full_name">Full name</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="vaccine_type">Vaccine type</string>
    <string name="immune_until">Immune until</string>
    <string name="birthdate">Birthdate</string>
    <string name="choose_test_result">Test result</string>
    <string name="add_test">Add</string>
    <string name="create_passport">Create passport</string>
    <string name="passport_not_created">You do not have a COVID-19 Passport. Please create one.</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="go_back">Go back</string>
    <string name="create_account">Create account</string>
    <string name="sign_in">Sign in</string>
    <string name="english">English</string>
    <string name="romanian">Romanian</string>
    <string name="danish">Danish</string>
    <string name="stay_vaccinated">Stay Vaccinated</string>
    <string name="data_type">Data Type</string>
</resources>